--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,20 +1,20 @@
 # Webapp Dockerfile - Multi-stage build
 # Stage 1: Build
-FROM node:20-alpine AS builder
+FROM oven/bun:1-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
-COPY package.json package-lock.json ./
+COPY package.json bun.lock ./
 
 # Install dependencies
-RUN npm ci
+RUN bun install --frozen-lockfile
 
 # Copy source code
 COPY . .
 
 # Build the app
-RUN npm run build
+RUN bun run build
 
 # Stage 2: Serve with nginx
 FROM nginx:alpine
