update branding to LumenRoute

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# LumenRoute AI - Environment Variables
+# LumenRoute - Environment Variables
 # Copy this file to .env and fill in your API keys
 
 # Required for AI-powered features
