--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# LumenRoute AI - Docker Compose Configuration
+# LumenRoute - Docker Compose Configuration
 # For Digital Ocean deployment
 
 services:
