update home branding to LumenRoute and add DEMO_MODE

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # Optional - falls back to mock data if not provided
 OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
 AIRNOW_API_KEY=your_airnow_api_key_here
+
+# Demo Mode (Set to true to force mock data for all features)
+DEMO_MODE=false
